<resources>
    <string name="app_name">Axiv</string>
    <string name="my_health">My Health</string>
    <string name="metrics">Metrics</string>
    <string name="track_metrics">Track Metrics</string>
    <string name="compete">Compete</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compete_title">Competitions</string>
    <string name="metrics_title">Metrics</string>
    <string name="my_health_title">My Health</string>
    <string name="rewards_title">Rewards</string>
    <string name="settings_title">Settings</string>
    <string name="refresh_values">Refresh values</string>
    <string name="overall_score">Your score:</string>
    <string name="health_suggestions">Health suggestions</string>
    <string name="daily_targets">Daily targets</string>
    <string name="score_breakdown">Score breakdown:</string>
    <string name="test_score">152.86</string>
    <string name="track_progress">Track progress</string>
    <string name="track_meals">Meals</string>
    <string name="track_steps">Steps</string>
    <string name="track_sleep">Sleep</string>
    <string name="track_hydration">Hydration</string>
    <string name="track_exercise">Exercise</string>
    <string name="track_weight">Weight</string>
    <string name="more_information">More information</string>
    <string name="close">Close</string>
    <string name="have_account">Already have an account? Sign in.</string>
    <string name="set_reminders">Set reminders</string>
    <string name="track_heart_rate">Heart rate</string>
    <string name="track_blood_pressure">Blood pressure</string>
    <string name="current_metric">Currently displaying: </string>
    <string name="track_progress_description">This is a sample description. This section will include a description for the currently displayed metric.</string>


</resources>
