<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MetricsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/track_meals"
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/track_meals"
            android:textColor="@color/colorWhite"
            android:drawableBottom="@drawable/baseline_local_dining_white_24dp"
            android:drawablePadding="-15dp"
            android:paddingBottom="30dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/track_sleep"
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_alignTop="@+id/track_meals"
            android:layout_toEndOf="@+id/track_meals"
            android:background="@color/colorPrimaryDark"
            android:drawableBottom="@drawable/baseline_airline_seat_flat_white_24dp"
            android:drawablePadding="-15dp"
            android:paddingBottom="30dp"
            android:text="@string/track_sleep"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/track_steps"
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_alignStart="@+id/track_meals"
            android:layout_below="@+id/track_meals"
            android:text="@string/track_steps"
            android:textColor="@color/colorWhite"
            android:drawableBottom="@drawable/baseline_directions_run_white_24dp"
            android:drawablePadding="-15dp"
            android:paddingBottom="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/track_hydration"
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_alignStart="@+id/track_sleep"
            android:layout_below="@+id/track_sleep"
            android:text="@string/track_hydration"
            android:textColor="@color/colorWhite"
            android:drawableBottom="@drawable/baseline_local_drink_white_24dp"
            android:drawablePadding="-15dp"
            android:paddingBottom="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/track_exercise"
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_alignStart="@+id/track_steps"
            android:layout_below="@+id/track_steps"
            android:text="@string/track_exercise"
            android:textColor="@color/colorWhite"
            android:drawableBottom="@drawable/baseline_fitness_center_white_24dp"
            android:drawablePadding="-15dp"
            android:paddingBottom="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/track_weight"
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_alignStart="@+id/track_hydration"
            android:layout_below="@+id/track_hydration"
            android:text="@string/track_weight"
            android:textColor="@color/colorWhite"
            android:drawableBottom="@drawable/baseline_web_asset_white_24dp"
            android:drawablePadding="-15dp"
            android:paddingBottom="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:layout_width="348dp"
            android:layout_height="70dp"
            android:layout_below="@+id/track_exercise"
            android:layout_marginTop="4dp"
            android:background="@color/colorPrimaryDark"
            android:text="View Metrics History"
            android:textColor="@color/colorWhite"
/>
    </RelativeLayout>

    </ScrollView>

</FrameLayout>